Workaround the bug in geography_out which excludes bounding box info
_ST_Expand(geography, float) adds the expansion info to the in-memory
structure, but that information is lost when the value is converted into
a text representation. That later causes XL datanode to run with an
incorrect plan.

Fix this for now by moving _ST_Expand (which ST_DWitin uses) into ST_DWithin
itself, thus avoiding SQL function preprocessing and working around the
issue.

--- a/postgis/uninstall_geography.sql.in
+++ b/postgis/uninstall_geography.sql.in
@@ -109,6 +109,7 @@ DROP FUNCTION IF EXISTS ST_AsGeoJson(int4, geography, int4, int4);
 
 DROP FUNCTION IF EXISTS _ST_Distance(geography, geography, float8, boolean);
 DROP FUNCTION IF EXISTS _ST_DWithin(geography, geography, float8, boolean);
+DROP FUNCTION IF EXISTS _ST_DWithin(geography, geography, float8, boolean, boolean);
 DROP FUNCTION IF EXISTS ST_Distance(geography, geography, boolean);
 DROP FUNCTION IF EXISTS ST_Distance(geography, geography);
 DROP FUNCTION IF EXISTS _ST_Expand(geography, float8);
