--- a/postgis/geography.sql.in
+++ b/postgis/geography.sql.in
@@ -604,6 +604,12 @@ CREATE OR REPLACE FUNCTION _ST_DWithin(geography, geography, float8, boolean)
 	LANGUAGE 'c' IMMUTABLE STRICT _PARALLEL
 	COST 100;
 
+CREATE OR REPLACE FUNCTION _ST_DWithin(geography, geography, float8, boolean, boolean)
+	RETURNS boolean
+	AS 'MODULE_PATHNAME','geography_dwithin'
+	LANGUAGE 'c' IMMUTABLE STRICT
+	COST 100;
+
 -- Availability: 1.5.0
 CREATE OR REPLACE FUNCTION ST_Distance(geography, geography, boolean)
 	RETURNS float8
@@ -634,14 +640,14 @@ CREATE OR REPLACE FUNCTION _ST_Expand(geography, float8)
 -- Availability: 1.5.0
 CREATE OR REPLACE FUNCTION ST_DWithin(geography, geography, float8, boolean)
 	RETURNS boolean
-	AS 'SELECT $1 OPERATOR(@extschema@.&&) @extschema@._ST_Expand($2,$3) AND $2 OPERATOR(@extschema@.&&) @extschema@._ST_Expand($1,$3) AND @extschema@._ST_DWithin($1, $2, $3, $4)'
+	AS 'SELECT @extschema@._ST_DWithin($1, $2, $3, $4, true)'
 	LANGUAGE 'sql' IMMUTABLE _PARALLEL;
 
 -- Currently defaulting to spheroid calculations
 -- Availability: 1.5.0
 CREATE OR REPLACE FUNCTION ST_DWithin(geography, geography, float8)
 	RETURNS boolean
-	AS 'SELECT $1 OPERATOR(@extschema@.&&) @extschema@._ST_Expand($2,$3) AND $2 OPERATOR(@extschema@.&&) @extschema@._ST_Expand($1,$3) AND @extschema@._ST_DWithin($1, $2, $3, true)'
+	AS 'SELECT @extschema@._ST_DWithin($1, $2, $3, true, true)'
 	LANGUAGE 'sql' IMMUTABLE _PARALLEL;
 
 -- Availability: 1.5.0 - this is just a hack to prevent unknown from causing ambiguous name because of geography
